<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    <LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:gravity="center" >
	    <CheckBox android:id="@+id/checkbox_matrixcomputation_100"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/checkbox_matrixcomputation_100"
			android:textSize="12sp"
			android:fontFamily="sans-serif-light"
	        android:onClick="onCheckboxClicked"/>
	    <CheckBox android:id="@+id/checkbox_matrixcomputation_200"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/checkbox_matrixcomputation_200"
			android:textSize="12sp"
        	android:fontFamily="sans-serif-light"
	        android:onClick="onCheckboxClicked"/>
		<CheckBox android:id="@+id/checkbox_matrixcomputation_300"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/checkbox_matrixcomputation_300"
			android:textSize="12sp"
			android:fontFamily="sans-serif-light"		        
	        android:onClick="onCheckboxClicked"/>
		<CheckBox android:id="@+id/checkbox_matrixcomputation_400"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/checkbox_matrixcomputation_400"
			android:textSize="12sp"
			android:fontFamily="sans-serif-light"		        
	        android:onClick="onCheckboxClicked"/>
		<CheckBox android:id="@+id/checkbox_matrixcomputation_500"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/checkbox_matrixcomputation_500"
			android:textSize="12sp"
			android:fontFamily="sans-serif-light"		        
	        android:onClick="onCheckboxClicked"/>
	</LinearLayout>
	<LinearLayout
		android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:gravity="center" >
		<CheckBox android:id="@+id/checkbox_matrixcomputation_600"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/checkbox_matrixcomputation_600"
			android:textSize="12sp"
			android:fontFamily="sans-serif-light"		        
	        android:onClick="onCheckboxClicked"/>
		<CheckBox android:id="@+id/checkbox_matrixcomputation_700"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/checkbox_matrixcomputation_700"
			android:textSize="12sp"
			android:fontFamily="sans-serif-light"		        
	        android:onClick="onCheckboxClicked"/>
		<CheckBox android:id="@+id/checkbox_matrixcomputation_800"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/checkbox_matrixcomputation_800"
			android:textSize="12sp"
			android:fontFamily="sans-serif-light"		        
	        android:onClick="onCheckboxClicked"/>
		<CheckBox android:id="@+id/checkbox_matrixcomputation_900"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/checkbox_matrixcomputation_900"
			android:textSize="12sp"
			android:fontFamily="sans-serif-light"		        
	        android:onClick="onCheckboxClicked"/>
		<CheckBox android:id="@+id/checkbox_matrixcomputation_1000"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/checkbox_matrixcomputation_1000"
			android:textSize="12sp"
			android:fontFamily="sans-serif-light"		        
	        android:onClick="onCheckboxClicked"/>

	</LinearLayout>
    <LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:gravity="center" >
		<CheckBox android:id="@+id/checkbox_matrixcomputation_1500"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/checkbox_matrixcomputation_1500"
			android:textSize="12sp"
			android:fontFamily="sans-serif-light"		        
	        android:onClick="onCheckboxClicked"/>
		<CheckBox android:id="@+id/checkbox_matrixcomputation_2000"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/checkbox_matrixcomputation_2000"
			android:textSize="12sp"
			android:fontFamily="sans-serif-light"		        
	        android:onClick="onCheckboxClicked"/>
		<CheckBox android:id="@+id/checkbox_matrixcomputation_3000"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/checkbox_matrixcomputation_3000"
			android:textSize="12sp"
			android:fontFamily="sans-serif-light"		        
	        android:onClick="onCheckboxClicked"/>
	</LinearLayout>
</LinearLayout>
