<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    <LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:gravity="center" >
	    <CheckBox android:id="@+id/checkbox_matrixcomputation_java"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/checkbox_matrixcomputation_java"
			android:textSize="12sp"
			android:fontFamily="sans-serif-light"
	        android:onClick="onCheckboxClicked"/>
	    <CheckBox android:id="@+id/checkbox_matrixcomputation_cpp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/checkbox_matrixcomputation_cpp"
			android:textSize="12sp"
        	android:fontFamily="sans-serif-light"
	        android:onClick="onCheckboxClicked"/>
		<CheckBox android:id="@+id/checkbox_matrixcomputation_opencv"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/checkbox_matrixcomputation_opencv"
			android:textSize="12sp"
			android:fontFamily="sans-serif-light"		        
	        android:onClick="onCheckboxClicked"/>
	</LinearLayout>
	<LinearLayout
		android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:gravity="center" >
	    <CheckBox android:id="@+id/checkbox_matrixcomputation_eigen"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/checkbox_matrixcomputation_eigen"
			android:textSize="12sp"
			android:fontFamily="sans-serif-light"		        
	        android:onClick="onCheckboxClicked"/>
	    <CheckBox android:id="@+id/checkbox_matrixcomputation_renderscript"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="12sp"
			android:fontFamily="sans-serif-light"
	        android:text="@string/checkbox_matrixcomputation_renderscript"
	        android:onClick="onCheckboxClicked"/>				
	</LinearLayout>
</LinearLayout>